--- a/WebApp/templates/login.html
+++ b/WebApp/templates/login.html
@@ -9,7 +9,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-<h2>Enter in your username and password or select <b>create and account</b> to make a new account</h2>
+<h2>Enter in your username and password or select <b>create an account</b> to make a new account</h2>
 <p> </p>
 {% if one %}
     <script>
