made comments on my code

--- a/WebApp/templates/create.html
+++ b/WebApp/templates/create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Create User Page {% endblock %}
-
 {% block content %}
+<!-- This renders all the flashed messages that were produce on the backend -->
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for msg in messages %}
