--- a/WebApp/templates/user.html
+++ b/WebApp/templates/user.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}User{% endblock %}
 {% block content %}
+<!-- Used to pass all the flash messages that we create or pass in the backend-->
 {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for msg in messages %}
@@ -8,10 +9,13 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
+<!-- This allows the user to input their email and if they already have a registered email then they
+ will have their email pop up-->
 <form action = "#" method = "POST">
     <input type = "email" name = "email" placeholder="Enter email" value="{{email if email}}">
     <input type = "submit" value = "submit">
 </form>
+<!-- Links to various pages that the user can navigate to since they are logged in-->
 <a>Welcome {{text}}</a>
 <a href="http://127.0.0.1:5000/logout">
     <button type = "button">Log out</button>
