--- a/WebApp/templates/user.html
+++ b/WebApp/templates/user.html
@@ -26,4 +26,7 @@
 <a href="http://127.0.0.1:5000/edit">
     <button type="button">Edit Profile</button>
 </a>
+<a href="http://127.0.0.1:5000/seeUsers">
+    <button type="button">See Users</button>
+</a>
 {% endblock %}
