creating a page that allows users to search for other users within the database

--- a/WebApp/templates/seeUsers.html
+++ b/WebApp/templates/seeUsers.html
@@ -32,13 +32,25 @@ textarea.searchbar:focus {
     </label>
 
     <button type="submit" id="search" style="display: none"></button>
-
-    {% if valid %}
-        <div>
-           <img src="{{img}}" alt="Users profile pic" width="60px">
-           <p>{{name}}</p>
-        </div>
-    {% endif %}
 </div>
 </form>
+{% if text %}
+        <div style="display: flex; justify-content: center;" id="profile">
+           <img src="{{img}}" alt="Users profile pic" width="60px" class="wrapped-img">
+            <div>
+           <p>{{name}}</p>
+           <p>{{age}}</p>
+           <p>{{email}}</p>
+            </div>
+        </div>
+{% endif %}
+<script>
+    const choice = document.getElementById("profile");
+    if(choice){
+        choice.addEventListener("click", function(){
+            window.location.href = "http://127.0.0.1:5000/displayUser";
+
+        });
+    }
+</script>
 {% endblock %}
