--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -80,6 +80,12 @@
       border-color: #4A90E2;
       box-shadow: 0 0 8px rgba(74, 144, 226, 0.6);
     }
+    .wrapped-img {
+      float: left;
+      margin-right: 15px;
+      margin-bottom: 10px;
+      width: 100px;
+    }
 </style>
 <body>
     <h1>Miracle's Website</h1>
