We have successfully edited the page to allow users to see each others profiles and are now establishing a friend requests system

--- a/WebApp/templates/details.html
+++ b/WebApp/templates/details.html
@@ -97,5 +97,8 @@
         {% endif %}
     </div>
 </div>
+<a href="http://127.0.0.1:5000/user">
+    <button type = "button">Return Home</button>
+</a>
 </body>
 {% endblock %}
