--- a/WebApp/templates/edit.html
+++ b/WebApp/templates/edit.html
@@ -162,6 +162,10 @@ info as they see fit-->
 
 
 </form>
+
+<a href="http://127.0.0.1:5000/user">
+    <button type = "button">Return Home</button>
+</a>
 <script>
     /* Here we have all the elements of interest that are within the form right here by their ID's.*/
     const pencil = document.getElementById("edit1");
