--- a/WebApp/templates/user.html
+++ b/WebApp/templates/user.html
@@ -29,4 +29,7 @@
 <a href="http://127.0.0.1:5000/seeUsers">
     <button type="button">See Users</button>
 </a>
+<a href="http://127.0.0.1:5000/viewRequests">
+    <button type="button">View Friend Requests</button>
+</a>
 {% endblock %}
