creating a chat system for users

--- a/WebApp/templates/user.html
+++ b/WebApp/templates/user.html
@@ -32,4 +32,10 @@
 <a href="http://127.0.0.1:5000/viewRequests">
     <button type="button">View Friend Requests</button>
 </a>
+<a href="http://127.0.0.1:5000/seeFriends">
+    <button type="button">View Friends</button>
+</a>
+<a href="http://127.0.0.1:5000/chat">
+    <button type="button">Chat with people</button>
+</a>
 {% endblock %}
