--- a/WebApp/templates/seeUsers.html
+++ b/WebApp/templates/seeUsers.html
@@ -47,6 +47,9 @@ textarea.searchbar:focus {
         <div style="text-align: center">
             <button type="button" style="background-color: green" id="add">Send Friend Request</button>
             <button type="button" id="profile">View Profile</button>
+           <a href="http://127.0.0.1:5000/chat">
+                <button type="button">Chat with User</button>
+            </a>
         </div>
 {% endif %}
 
@@ -83,5 +86,24 @@ textarea.searchbar:focus {
 
         });
     }
+
+    /*const speak = document.getElementById("tone");
+    formData.append("speech", speak);
+    if(speak){
+        friend.addEventListener("click", function(){
+            fetch("http://127.0.0.1:5000/chat", {
+                    method: "POST",
+                    body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.message);
+                })
+                .catch(error => {
+                    alert("ERROR");
+                });
+
+        });
+    }*/
 </script>
 {% endblock %}
