made some comments to my code along with adding some session checks to ensure that the user is logged in before they access certain pages

--- a/WebApp/templates/chat.html
+++ b/WebApp/templates/chat.html
@@ -90,6 +90,15 @@
 
 </style>
 
+    {% if alert %}
+        <script>
+            alert("{{alert}}");
+            window.location.href = "http://127.0.0.1:5000/login";
+        </script>
+    {% endif %}
+
+
+
 <form action="#" enctype="multipart/form-data" method="POST">
 <div class="chat-container">
   <div class="message-container">
