--- a/WebApp/templates/details.html
+++ b/WebApp/templates/details.html
@@ -97,6 +97,7 @@
         {% endif %}
     </div>
 </div>
+<!-- allows the user to return to their user page -->
 <a href="http://127.0.0.1:5000/user">
     <button type = "button">Return Home</button>
 </a>
