--- a/WebApp/templates/edit.html
+++ b/WebApp/templates/edit.html
@@ -162,7 +162,7 @@ info as they see fit-->
 
 
 </form>
-
+<!-- allows the user to return to their user page -->
 <a href="http://127.0.0.1:5000/user">
     <button type = "button">Return Home</button>
 </a>
