--- a/WebApp/templates/seeFriends.html
+++ b/WebApp/templates/seeFriends.html
@@ -12,6 +12,14 @@
 
     }
 </style>
+
+{% if alert %}
+<script>
+    alert("{{alert}}");
+    window.location.href = "http://127.0.0.1:5000/login";
+</script>
+
+{% endif %}
 <h2><b>View Friends</b></h2>
 {% if network %}
   {% for friend in network %}
