--- a/WebApp/templates/create.html
+++ b/WebApp/templates/create.html
@@ -25,6 +25,7 @@
     <p><input type ="file" name="png" accept ="image/*" ></p>
     <p><input type="submit" value="submit"></p>
 </form>
+<!-- allows the user to return to their user page -->
 <a href="http://127.0.0.1:5000/user">
     <button type = "button">Return Home</button>
 </a>
